Add a capture example for V1

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<H>Closure serialization<H>
-<a href="v1.html">version 1</a>
+<html>
+  <body>
 
+    <h1>Closure serialization</h1>
+      <h2><a href="v1.html">version 1</a> </h2>
+      <ul>
+        <li>Capture group is not a part of the function signature</li>
+        <li>Instead captured values end of as normal registers (ahead of param registers)</li>
+      </ul>
+  </body>
+</html>
