--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
         <li>Capture group is not a part of the function signature</li>
         <li>Instead captured values end of as normal registers (ahead of param registers)</li>
       </ul>
+      <h2><a href="v2.html">version 2</a> </h2>
+      <ul>
+        <li>Capture group is part of the function signature</li>
+      </ul>
   </body>
 </html>
