--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
       <ul>
         <li>Capture group is part of the function signature</li>
       </ul>
+      <h2><a href="v3.html">version 3</a> </h2>
+      <ul>
+        <li>Special capture operation that takes a capture group and a lambda</li>
+      </ul>
   </body>
 </html>
